Closed Bug 1613329 Opened 6 years ago Closed 6 years ago

[webvtt] text track created by track element didn't be inserted to media element's track list

Categories

(Core :: Audio/Video, defect, P3)

defect

Tracking

()

RESOLVED FIXED
mozilla75
Tracking Status
firefox75 --- fixed

People

(Reporter: alwu, Assigned: alwu)

References

()

Details

Attachments

(2 files)

Reproducible by the test case in bug1610943 comment0.

When we bind track element into DOM tree, we didn't add its text track to media element's track list.

This change ensures that we would always remember to add text track to media element's track list.

Pushed by alwu@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/352b7113d015 part1 : append text track to media element when binding track element to DOM tree. r=bzbarsky https://hg.mozilla.org/integration/autoland/rev/bbf90fca3403 part2 : add test. r=bzbarsky
Created web-platform-tests PR https://github.com/web-platform-tests/wpt/pull/21712 for changes under testing/web-platform/tests
Upstream web-platform-tests status checks passed, PR will merge once commit reaches central.
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla75
Upstream PR merged by moz-wptsync-bot
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: