Bug 1613329 - part1 : append text track to media element when binding track element to DOM tree. r=bzbarsky

This change ensures that we always remember to add a text track to media element's track list.

Differential Revision: https://phabricator.services.mozilla.com/D61666